CXDEVII-1759: Fixed spacing issue between ul's

--- a/aegon-sass-library/widgets/_lhfs.scss
+++ b/aegon-sass-library/widgets/_lhfs.scss
@@ -47,6 +47,7 @@
       } 
     }
     li.product {
+      margin: 25px 0 15px 0;
       .description {
         &:before {
           font-family: $font_icons;
@@ -59,7 +60,9 @@
         padding-left: 40px;
         margin-bottom: 20px;
       }
-
+      div.title {
+        margin-bottom: 18px;
+      }
       div.title, span.police-number {
         font-family: $font_medium;  //font-weight bold does not work for this font family >:(;
       }
